# hokrodelopt

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg  setup.py  wordlist.txt
.github/workflows/: static-analysis.yml  tests.yml
hokrodelopt/: expr.py
test/: test_sample.py
