[metadata]
name = hokrodelopt
description = Tool for modelling integer optimization problems with polynomials and Kronecker Delta
long_description = file: README.md
long_description_content_type = text/markdown
author = Mostafa Atallah, Adam Glos, Julia Plewa, Vyron Vasileiadis
author_email = m.ataallah.2014@gmail.com, aglos@iitis.pl, juliadplewa@gmail.com, hi@fedonman.com
license = Apache-2.0
url = https://gitlab.com/qworld/qresearch/research-projects/hokrodelopt/
classifiers =
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find_namespace:
python_requires = >= 3.7
install_requires =
    qiskit >= 0.34.0
    sympy >= 1.9
    numpy >= 1.21.5

[options.extras_require]
lint = pre-commit == 2.16.0; isort == 5.10.1; black == 22.3.0; flake8 == 4.0.1; mypy == 0.931; pylint == 2.12.2; pyenchant == 3.2.2
test = pytest == 6.2.5; pytest-mock == 3.6.1; pytest-cov == 2.12

[options.packages.find]
exclude = tests
